cabal-version:      3.0
name:               HaskMate
version:            0.1.0.0
synopsis:            Haskell File Monitor
homepage:            https://github.com/Frost-Lord/HaskMate

license:            MIT
license-file:       LICENSE
author:             Frost Lord
maintainer:         51778028+Frost-Lord@users.noreply.github.com

category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable HaskMate
    import:           warnings
    main-is:          HaskMate.hs
    other-modules:    Commands
    build-depends:    base, process, directory, time
    hs-source-dirs:   app
    default-language: Haskell2010
