cabal-version:      3.0
name:               test
version:            0.1.0.0
synopsis:            Haskell File Monitor test script
homepage:            https://github.com/Frost-Lord/HaskMate

author:             Frost Lord
maintainer:         51778028+Frost-Lord@users.noreply.github.com

category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable HaskMate
    import:           warnings
    main-is:          test.hs
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
